v0.6.3.1 z-index issue

--- a/css/pwa-banner.css
+++ b/css/pwa-banner.css
@@ -9,6 +9,7 @@
   gap: 70px;
   border-radius: 16px;
   padding: 16px;
+  z-index: 50;
 }
 .pwa__content {
   display: flex;
